--- a/index.html
+++ b/index.html
@@ -27,38 +27,38 @@
 
 			<div id="qwerty" class="section">
 				<div class="keyrow">
-					<button class="key">q</button>
-					<button class="key">w</button>
-					<button class="key">e</button>
-					<button class="key">r</button>
-					<button class="key">t</button>
-					<button class="key">y</button>
-					<button class="key">u</button>
-					<button class="key">i</button>
-					<button class="key">o</button>
-					<button class="key">p</button>
+					<button class="key" data-key="q">q</button>
+					<button class="key" data-key="w">w</button>
+					<button class="key" data-key="e">e</button>
+					<button class="key" data-key="r">r</button>
+					<button class="key" data-key="t">t</button>
+					<button class="key" data-key="y">y</button>
+					<button class="key" data-key="u">u</button>
+					<button class="key" data-key="i">i</button>
+					<button class="key" data-key="o">o</button>
+					<button class="key" data-key="p">p</button>
 				</div>
 
 				<div class="keyrow">
-					<button class="key">a</button>
-					<button class="key">s</button>
-					<button class="key">d</button>
-					<button class="key">f</button>
-					<button class="key">g</button>
-					<button class="key">h</button>
-					<button class="key">j</button>
-					<button class="key">k</button>
-					<button class="key">l</button>
+					<button class="key" data-key="a">a</button>
+					<button class="key" data-key="s">s</button>
+					<button class="key" data-key="d">d</button>
+					<button class="key" data-key="f">f</button>
+					<button class="key" data-key="g">g</button>
+					<button class="key" data-key="h">h</button>
+					<button class="key" data-key="j">j</button>
+					<button class="key" data-key="k">k</button>
+					<button class="key" data-key="l">l</button>
 				</div>
 
 				<div class="keyrow">
-					<button class="key">z</button>
-					<button class="key">x</button>
-					<button class="key">c</button>
-					<button class="key">v</button>
-					<button class="key">b</button>
-					<button class="key">n</button>
-					<button class="key">m</button>
+					<button class="key" data-key="z">z</button>
+					<button class="key" data-key="x">x</button>
+					<button class="key" data-key="c">c</button>
+					<button class="key" data-key="v">v</button>
+					<button class="key" data-key="b">b</button>
+					<button class="key" data-key="n">n</button>
+					<button class="key" data-key="m">m</button>
 				</div>
 			</div>
 
