Added Animation methods
Added background

--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 	<body>
 		<div class="main-container">
 			<div id="overlay" class="start">
-				<h2 class="title">Phrase Hunter</h2>
+				<h2 class="title blink-caret-effect">Phrase Hunter</h2>
 				<h1 id="game-over-message"></h1>
-				<button id="btn__reset">Start Game</button>
+				<!-- <button id="btn__reset">Start Game</button> -->
+				
+				<button id="btn__reset" class="button button--nina button--border-thin button--round-s" data-text="Start Game">
+        			<span>S</span><span>t</span><span>a</span><span>r</span><span>t</span><span>&nbsp;</span><span>G</span><span>a</span><span>m</span><span>e</span>
+      			</button>
+				<!-- <button id="btn__reset" class="button button--nina button--text-thick button--text-upper button--size-s" data-text="Start Game">
+        			<span>S</span><span>t</span><span>a</span><span>r</span><span>t</span><span> </span><span>G</span><span>a</span><span>m</span><span>e</span>
+      			</button> -->
 			</div>
 
 			<div id="banner" class="section">
@@ -22,7 +29,7 @@
 			</div>
 
 			<div id="phrase" class="section">
-				<ul></ul>
+				<ul class="blink-caret-effect"></ul>
 			</div>
 
 			<div id="qwerty" class="section">
@@ -74,7 +81,8 @@
 		</div>
 
 	</body>
-    
+	
+	<script type="text/javascript" src="js/Animation.js"></script>
 	<script type="text/javascript" src="js/Phrase.js"></script>
 	<script type="text/javascript" src="js/Game.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
