Added comments before first review

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 		<div class="main-container">
 			<div id="overlay" class="start">
 				<h2 class="title blink-caret-effect">Phrase Hunter</h2>
-				<h1 id="game-over-message"></h1>
+				<div class="reveal-holder gameOverSize">
+					<h1 id="game-over-message"></h1>
+				</div>
 				<!-- <button id="btn__reset">Start Game</button> -->
 				
 				<button id="btn__reset" class="button button--nina button--border-thin button--round-s" data-text="Start Game">
         			<span>S</span><span>t</span><span>a</span><span>r</span><span>t</span><span>&nbsp;</span><span>G</span><span>a</span><span>m</span><span>e</span>
       			</button>
-				<!-- <button id="btn__reset" class="button button--nina button--text-thick button--text-upper button--size-s" data-text="Start Game">
-        			<span>S</span><span>t</span><span>a</span><span>r</span><span>t</span><span> </span><span>G</span><span>a</span><span>m</span><span>e</span>
-      			</button> -->
 			</div>
 
 			<div id="banner" class="section">
@@ -79,7 +78,6 @@
 				</ol>
 			</div>
 		</div>
-
 	</body>
 	
 	<script type="text/javascript" src="js/Animation.js"></script>
